force-app/main/default/objects/SL_RacetrackReport__c/SL_RacetrackReport__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to set the parameter of the Racetrack report!</description>
    <label>SL_RacetrackReport</label>
</CustomObject>