force-app/main/default/objects/SL_RacetrackReport__c/fields/ChildObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectAPIName__c</fullName>
    <description>This field is used to store the child object API name</description>
    <inlineHelpText>This field is used to store the child object API name</inlineHelpText>
    <label>ChildObjectAPIName</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>