force-app/main/default/objects/SL_RacetrackReport__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <description>using for identification in the button param</description>
    <label>Developer Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>