force-app/main/default/objects/SL_RacetrackReport__c/fields/FieldSetAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldSetAPIName__c</fullName>
    <description>This field is used to store the field set name.</description>
    <inlineHelpText>This field is used to store the field set name.</inlineHelpText>
    <label>FieldSetAPIName</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>