force-app/main/default/objects/SL_RacetrackReport__c/fields/GroupByFieldSetAPIName__c.field-meta.xml
<CustomField>
    <fullName>GroupByFieldSetAPIName__c</fullName>
    <description>using child object FieldSet for GroupBy picklist options</description>
    <label>GroupByFieldSetAPIName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>