force-app/main/default/objects/SL_RacetrackReport__c/fields/GroupingObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>GroupingObjectAPIName__c</fullName>
    <description>This field is used to store the grouping object name by which the grouping will done.</description>
    <inlineHelpText>This field is used to store the grouping object name by which the grouping will done.</inlineHelpText>
    <label>GroupingObjectAPIName</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>