force-app/main/default/objects/SL_RacetrackReport__c/fields/GroupingObjectRelationshipAPIName__c.field-meta.xml
<CustomField>
    <fullName>GroupingObjectRelationshipAPIName__c</fullName>
    <description>This field is used to store the relationship name of the Grouping Object on child object.</description>
    <inlineHelpText>This field is used to store the relationship name of the Grouping Object on child object.</inlineHelpText>
    <label>GroupingObjectRelationshipAPIName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>