force-app/main/default/objects/SL_RacetrackReport__c/fields/Layout_Filter_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Layout_Filter_Field_Values__c</fullName>
    <description>Comma separated</description>
    <label>Layout Filter Field Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>