force-app/main/default/objects/SL_RacetrackReport__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>This will store the URL of the logo document.</description>
    <inlineHelpText>This will store the URL of the logo document.</inlineHelpText>
    <label>Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>