force-app/main/default/objects/SL_RacetrackReport__c/fields/ParentObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectAPIName__c</fullName>
    <description>This filed is used to store the parent object API name.</description>
    <inlineHelpText>This filed is used to store the parent object API name.</inlineHelpText>
    <label>ParentObjectAPIName</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>