force-app/main/default/objects/SL_RacetrackReport__c/fields/ParentObjectRelationshipAPIName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectRelationshipAPIName__c</fullName>
    <description>This field is used to store the Parent Object Relationship API Name on child object.</description>
    <inlineHelpText>This field is used to store the Parent Object Relationship API Name on child object.</inlineHelpText>
    <label>ParentObjectRelationshipAPIName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>