force-app/main/default/objects/SL_RacetrackReport__c/fields/Show_Filter__c.field-meta.xml
<CustomField>
    <fullName>Show_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Filter</label>
    <type>Checkbox</type>
</CustomField>