force-app/main/default/objects/SL_RacetrackReport__c/fields/ShowExtraGroupOption__c.field-meta.xml
<CustomField>
    <fullName>ShowExtraGroupOption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowExtraGroupOption</label>
    <type>Checkbox</type>
</CustomField>