force-app/main/default/objects/SL_RacetrackReport__c/fields/SortByFieldSetAPIName__c.field-meta.xml
<CustomField>
    <fullName>SortByFieldSetAPIName__c</fullName>
    <description>using child object FieldSet for SortBy picklist options</description>
    <label>SortByFieldSetAPIName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>